--- a/net/bridge/Makefile
+++ b/net/bridge/Makefile
@@ -16,6 +16,6 @@ bridge-$(CONFIG_BRIDGE_IGMP_SNOOPING) += br_multicast.o br_mdb.o
 
 bridge-$(CONFIG_BRIDGE_VLAN_FILTERING) += br_vlan.o
 
-bridge-$(CONFIG_TRILL) += rbridge/rbr.o
+bridge-$(CONFIG_TRILL) += rbridge/rbr.o rbridge/rbr_netlink.o
 
 obj-$(CONFIG_BRIDGE_NF_EBTABLES) += netfilter/
