net: rbridge: insert VLAN in the inner header on ingress
Handle VLAN as payload when encapsulating native frames: upon ingress,
the native frame's VLAN is to be set in the inner header. References
to this VLAN must also be dropped from the sk_buff, otherwise it would
be restored in the outer header upon xmit.

(this patch was in fact already present in the VNT which is not merged
at the moment, but we forgot to import it in the TRILL part)

[slightly edit comment]
Signed-off-by: Guillaume Nault <g.nault@alphalink.fr>
Signed-off-by: William Dauchy <william@gandi.net>
Signed-off-by: Ahmed Amamou <ahmed@gandi.net>

--- a/net/bridge/Kconfig
+++ b/net/bridge/Kconfig
@@ -64,6 +64,7 @@ config BRIDGE_VLAN_FILTERING
 config TRILL
 	bool "Enable RBridge capabilities (RFC6325) (EXPERIMENTAL)"
 	depends on BRIDGE
+	depends on BRIDGE_VLAN_FILTERING
 	default n
 	---help---
 	  enable trill option on bridge to get Rbridge
