net: bridge: add vni creation/destruction functions
add vni creation/destruction functions
vni port addociation/ dissociation functions

Signed-off-by: Ahmed Amamou <ahmed@gandi.net>
Signed-off-by: William Dauchy <william@gandi.net>
Signed-off-by: Kamel Haddadou <kamel@gandi.net>

--- a/net/bridge/Makefile
+++ b/net/bridge/Makefile
@@ -18,4 +18,6 @@ bridge-$(CONFIG_BRIDGE_VLAN_FILTERING) += br_vlan.o
 
 bridge-$(CONFIG_TRILL) += rbridge/rbr.o rbridge/rbr_netlink.o
 
+bridge-$(CONFIG_TRILL_VNT) += rbridge/rbr_vni.o
+
 obj-$(CONFIG_BRIDGE_NF_EBTABLES) += netfilter/
