Kconfig.diff successgit add Kconfig

--- a/net/bridge/Kconfig
+++ b/net/bridge/Kconfig
@@ -33,6 +33,17 @@ config BRIDGE
 
 	  If unsure, say N.
 
+config BRIDGE_MPLS
+       tristate "Bridge: MPLS support"
+       depends on BRIDGE && MPLS
+       ---help---
+         If you say Y here, the kernel will support being an egress for
+         Ethernet over MPLS packets
+
+         If unsure, say N.
+
+
+
 config BRIDGE_IGMP_SNOOPING
 	bool "IGMP/MLD snooping"
 	depends on BRIDGE
