--- a/net/ipv4/Kconfig
+++ b/net/ipv4/Kconfig
@@ -160,6 +160,15 @@ config IP_PNP_RARP
 	  operating on your network. Read
 	  <file:Documentation/filesystems/nfs/nfsroot.txt> for details.
 
+config IP_MPLS
+        tristate "IP: MPLS support"
+        depends on INET && MPLS
+        ---help---
+          If you say Y here, the kernel will support being an ingress and
+          egress LER for IPv4 packets
+ 
+          If unsure, say N.
+
 config NET_IPIP
 	tristate "IP: tunneling"
 	select INET_TUNNEL
